--- a/Frontend/src/assets/css/newarrivals.css
+++ b/Frontend/src/assets/css/newarrivals.css
@@ -48,7 +48,8 @@
 }
 
 .swiper {
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
   height: 500px;
   padding-bottom: 40px;
 }
