--- a/Frontend/src/assets/css/style.css
+++ b/Frontend/src/assets/css/style.css
@@ -23,15 +23,6 @@
   --footer-bg: #1e411f;    
 }
 
-html {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE/Edge */
-}
-
-html::-webkit-scrollbar {
-  display: none; /* Chrome/Safari */
-}
-
 * {
   scrollbar-width: none !important;
   -ms-overflow-style: none !important;
@@ -40,11 +31,6 @@ html::-webkit-scrollbar {
 *::-webkit-scrollbar {
   display: none !important;
   width: 0 !important;
-}
-
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
 }
 
 html, body {
